16e8aa142 fix: realign pdp tabs labels in mobile

--- a/output.css
+++ b/output.css
@@ -12891,10 +12891,9 @@ cx-tab-paragraph-container > h3:not(.active):hover:after {
 }
 @media (max-width: 767.98px) {
   cx-tab-paragraph-container > h3 {
-    text-indent: 20px;
     border-top: 1px var(--cx-color-light) solid;
     font-size: 18px;
-    padding: 15px 0 0 0;
+    padding: 15px 0 0 4%;
   }
   cx-tab-paragraph-container > h3:before {
     content: "+";
@@ -12905,8 +12904,14 @@ cx-tab-paragraph-container > h3:not(.active):hover:after {
     position: relative;
     color: var(--cx-color-text);
   }
+  cx-tab-paragraph-container > h3:after {
+    margin: 15px auto auto -4%;
+  }
   cx-tab-paragraph-container > h3.active:before {
     content: "–";
+  }
+  cx-tab-paragraph-container > h3.active:after, cx-tab-paragraph-container > h3:hover:after {
+    width: 104%;
   }
   cx-tab-paragraph-container > div {
     padding: 15px 5px;
